Avances de pantallas y css

--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Navbar ACTC</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-    "primer committt"
+
+    <nav class="navbar">
+        <div class="logo">
+            <img src="./Recursos/LOGO.png" alt="Logo ACTC">
+        </div>
+        <ul class="nav-links">
+            <li><a href="#">INICIO</a></li>
+            <li><a href="#">CAMPEONATO</a></li>
+            <li><a href="calendario.html">CALENDARIO</a></li>
+            <li><a href="#">REGISTRO</a></li>
+        </ul>
+    </nav>
+
+    <main>
+        <h1>Bienvenido al Campeonato ACTC</h1>
+        <p>Selecciona una opción en el menú para continuar.</p>
+    </main>
+
 </body>
 </html>
