Mejorando CSS e inicio

--- a/Pagina/Pantallas/calendario.html
+++ b/Pagina/Pantallas/calendario.html
@@ -213,5 +213,11 @@
     </section>
 </main>
 
+<!-- Footer -->
+<footer class="site-footer">
+    <div class="footer-inner">
+        <strong>FOOTER</strong>
+    </div>
+</footer>
 </body>
 </html>
