--- a/Pagina/Pantallas/registro.html
+++ b/Pagina/Pantallas/registro.html
@@ -15,10 +15,10 @@
         <span>ACTC</span>
     </div>
     <ul class="nav-links">
-        <li><a href="inicio.html">Inicio</a></li>
-        <li><a href="#">Campeonato</a></li>
-        <li><a href="calendario.html">Calendario</a></li>
-        <li><a href="registro.html">Registro</a></li>
+        <li><a href="inicio.html">INICIO</a></li>
+        <li><a href="#">CAMPEONATO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="registro.html">REGISTRO</a></li>
     </ul>
 </nav>
 
@@ -51,5 +51,11 @@
     </div>
 </main>
 
+<!-- Footer -->
+<footer class="site-footer">
+    <div class="footer-inner">
+        <strong>FOOTER</strong>
+    </div>
+</footer>
 </body>
 </html>
