--- a/Pagina/Pantallas/registropiloto.html
+++ b/Pagina/Pantallas/registropiloto.html
@@ -15,9 +15,10 @@
         <span>ACTC</span>
     </div>
     <ul class="nav-links">
-        <li><a href="index.html">Inicio Campeonato</a></li>
-        <li><a href="calendario.html">Calendario</a></li>
-        <li><a href="registro.html">Registro</a></li>
+        <li><a href="inicio.html">INICIO</a></li>
+        <li><a href="#">CAMPEONATO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="registro.html">REGISTRO</a></li>
     </ul>
 </nav>
 
@@ -52,5 +53,11 @@
     </form>
 </main>
 
+<!-- Footer -->
+<footer class="site-footer">
+    <div class="footer-inner">
+        <strong>FOOTER</strong>
+    </div>
+</footer>
 </body>
 </html>
