--- a/Pagina/Pantallas/registropiloto.html
+++ b/Pagina/Pantallas/registropiloto.html
@@ -6,57 +6,79 @@
     <title>Registrar Piloto</title>
     <link rel="stylesheet" href="../style.css" />
 </head>
-<body class="registro-page">
+<body class="form-page">
 
     <!-- Navbar -->
-<nav class="navbar">
-    <div class="logo">
-        <img src="Recursos/LOGO.png" alt="Logo ACTC" />
-    </div>
-    <ul class="nav-links">
-        <li><a href="inicio.html">INICIO</a></li>
-        <li><a href="#">CAMPEONATO</a></li>
-        <li><a href="calendario.html">CALENDARIO</a></li>
-        <li><a href="registro.html">REGISTRO</a></li>
-    </ul>
-</nav>
+    <nav class="navbar">
+        <div class="logo">
+            <img src="Recursos/LOGO.png" alt="Logo ACTC" />
+        </div>
+        <ul class="nav-links">
+            <li><a href="inicio.html">INICIO</a></li>
+            <li><a href="#">CAMPEONATO</a></li>
+            <li><a href="calendario.html">CALENDARIO</a></li>
+            <li><a href="registro.html">REGISTRO</a></li>
+        </ul>
+    </nav>
 
     <!-- Formulario -->
-<main class="form-container">
-    <h1>REGISTRO DE PILOTO</h1>
-    <form action="#" method="post" class="form-card">
+    <main class="container">
+        <section class="card">
+            <header class="header">
+                <h1 class="title">Registro de Piloto</h1>
+                <p class="subtitle">Completá todos los campos para dar de alta un nuevo piloto en la ACTC.</p>
+            </header>
+            
+            <form class="form-grid" action="#" method="post">
+                <div class="field">
+                    <label for="nombre">Nombre del piloto</label>
+                    <input type="text" id="nombre" name="nombre" required placeholder="Ej: Juan Pérez">
+                </div>
 
-    <label for="nombre">Nombre del piloto</label>
-    <input type="text" id="nombre" name="nombre" required placeholder="Ej: Juan Pérez">
+                <div class="field">
+                    <label for="edad">Edad</label>
+                    <input type="number" id="edad" name="edad" required min="16" max="80" placeholder="Ej: 25">
+                </div>
 
-    <label for="edad">Edad</label>
-    <input type="number" id="edad" name="edad" required min="16" max="80" placeholder="Ej: 25">
+                <div class="field">
+                    <label for="numero">Número</label>
+                    <input type="number" id="numero" name="numero" required placeholder="Ej: 15">
+                </div>
 
-    <label for="numero">Número</label>
-    <input type="number" id="numero" name="numero" required placeholder="Ej: 15">
+                <div class="field">
+                    <label for="marca">Marca donde corre</label>
+                    <select id="marca" name="marca" required>
+                        <option value="">Seleccioná una marca</option>
+                        <option value="Ford">Ford</option>
+                        <option value="Chevrolet">Chevrolet</option>
+                        <option value="Toyota">Toyota</option>
+                        <option value="Renault">Renault</option>
+                    </select>
+                </div>
 
-    <label for="marca">Marca donde corre</label>
-    <input type="text" id="marca" name="marca" required placeholder="Ej: Ford, Chevrolet...">
+                <div class="field">
+                    <label for="ciudad">Ciudad</label>
+                    <input type="text" id="ciudad" name="ciudad" required placeholder="Ej: Buenos Aires">
+                </div>
 
-    <label for="ciudad">Ciudad</label>
-    <input type="text" id="ciudad" name="ciudad" required placeholder="Ej: Buenos Aires">
+                <div class="field full">
+                    <label for="observaciones">Observaciones</label>
+                    <textarea id="observaciones" name="observaciones" rows="4" required placeholder="Escriba aquí cualquier comentario adicional..."></textarea>
+                </div>
 
-    <label for="observaciones">Observaciones</label>
-    <textarea id="observaciones" name="observaciones" rows="4" required placeholder="Escriba aquí cualquier comentario adicional..."></textarea>
+                <div class="actions">
+                    <button type="reset" class="btn btn-ghost">Resetear</button>
+                    <button type="submit" class="btn btn-primary">Enviar</button>
+                </div>
+            </form>
+        </section>
+    </main>
 
-    <div class="form-buttons">
-        <button type="submit" class="btn btn-primary">Enviar</button>
-        <button type="reset" class="btn btn-outline">Resetear información</button>
-    </div>
-
-    </form>
-</main>
-
-<!-- Footer -->
-<footer class="site-footer">
-    <div class="footer-inner">
-        <strong>FOOTER</strong>
-    </div>
-</footer>
+    <!-- Footer -->
+    <footer class="site-footer">
+        <div class="footer-inner">
+            <strong>FOOTER</strong>
+        </div>
+    </footer>
 </body>
 </html>
