--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -13,8 +13,8 @@
             <img src="./Recursos/LOGO.png" alt="Logo ACTC">
         </div>
         <ul class="nav-links">
-            <li><a href="#">INICIO</a></li>
-            <li><a href="#">CAMPEONATO</a></li>
+            <li><a href="inicio.html">INICIO</a></li>
+            <li><a href="campeonato.html">CAMPEONATO</a></li>
             <li><a href="calendario.html">CALENDARIO</a></li>
             <li><a href="registro.html">REGISTRO</a></li>
         </ul>
