--- a/Pagina/Pantallas/registro.html
+++ b/Pagina/Pantallas/registro.html
@@ -15,7 +15,7 @@
         </div>
         <ul class="nav-links">
             <li><a href="inicio.html">INICIO</a></li>
-            <li><a href="#">CAMPEONATO</a></li>
+            <li><a href="campeonato.html">CAMPEONATO</a></li>
             <li><a href="calendario.html">CALENDARIO</a></li>
             <li><a href="registro.html">REGISTRO</a></li>
         </ul>
