--- a/Pagina/Pantallas/registropiloto.html
+++ b/Pagina/Pantallas/registropiloto.html
@@ -7,23 +7,6 @@
     <link rel="stylesheet" href="../style.css" />
 </head>
 
-<script>
-document.querySelector('form.form-grid')?.addEventListener('submit', async (e) => {
-    e.preventDefault();
-    const fd = new FormData(e.target);
-    const payload = Object.fromEntries(fd.entries());   
-    const res = await fetch('/ACTC.proyecto/Pagina/api/add_piloto.php', {
-        method: 'POST',
-        headers: {'Accept':'application/json'},
-        body: JSON.stringify(payload)
-    });
-    const data = await res.json();
-    if (data.ok) { alert('Piloto registrado. ID: ' + data.id); e.target.reset(); }
-    else { alert('Error: ' + (data.msg || 'No se pudo registrar')); }
-    });
-</script>
-
-
 <body class="form-page">
 
     <!-- Navbar -->
@@ -79,6 +62,13 @@ document.querySelector('form.form-grid')?.addEventListener('submit', async (e) =
                     <input type="text" id="ciudad" name="ciudad" required placeholder="Ej: Buenos Aires">
                 </div>
 
+                <div class="field">
+                    <label for="id">ID de Piloto (opcional)</label>
+                    <input type="number" id="id" name="id" min="1" placeholder="Dejar vacío para automático">
+                    <span class="hint">Si lo dejás vacío, se genera automáticamente.</span>
+                </div>
+
+
                 <div class="field full">
                     <label for="observaciones">Observaciones</label>
                     <textarea id="observaciones" name="observaciones" rows="4" required placeholder="Escriba aquí cualquier comentario adicional..."></textarea>
@@ -98,5 +88,28 @@ document.querySelector('form.form-grid')?.addEventListener('submit', async (e) =
             <strong>FOOTER</strong>
         </div>
     </footer>
+
+<script>
+function initRegistroPiloto(){
+    const form = document.querySelector('form.form-grid');
+    if(!form) return;
+    form.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        const fd = new FormData(form);
+        const payload = Object.fromEntries(fd.entries());
+        const res = await fetch('/ACTC.proyecto/Pagina/api/add_piloto.php', {
+            method:'POST',
+            headers:{'Accept':'application/json'},
+            body:new URLSearchParams(payload)
+        });
+        const data = await res.json();
+        if(data.ok){ alert('Piloto registrado. ID: '+data.id); form.reset(); }
+        else { alert('Error: '+(data.msg||'No se pudo registrar')); }
+    });
+}
+document.addEventListener('DOMContentLoaded', initRegistroPiloto);
+</script>
+
+
 </body>
 </html>
