--- a/Pagina/Pantallas/registrocampeonato.html
+++ b/Pagina/Pantallas/registrocampeonato.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="utf-8" />
@@ -6,87 +6,86 @@
     <title>Actualizar Campeonato</title>
     <link rel="stylesheet" href="../style.css">
 </head>
-
 <body>
-        <!-- Navbar -->
-    <nav class="navbar">
-        <div class="logo">
-            <img src="Recursos/LOGO.png" alt="Logo ACTC" />
-        </div>
-        <ul class="nav-links">
-            <li><a href="inicio.html">INICIO</a></li>
-            <li><a href="campeonato.html">CAMPEONATO</a></li>
-            <li><a href="calendario.html">CALENDARIO</a></li>
-            <li><a href="registro.html">REGISTRO</a></li>
-        </ul>
-    </nav>
 
-    <main class="container">
+<nav class="navbar">
+    <div class="logo"><img src="Recursos/LOGO.png" alt="Logo ACTC" /></div>
+    <ul class="nav-links">
+        <li><a href="inicio.html">INICIO</a></li>
+        <li><a href="campeonato.html">CAMPEONATO</a></li>
+        <li><a href="calendario.html">CALENDARIO</a></li>
+        <li><a href="registro.html" class="active">REGISTRO</a></li>
+    </ul>
+</nav>
+
+<main class="container">
     <section class="card">
         <header class="header">
             <h1 class="title">Actualizar Campeonato</h1>
-            <p class="subtitle">Ingresá el <strong>ID del piloto</strong>, el <strong>puntaje sumado</strong> y la <strong>marca</strong> para registrar la actualización.</p>
-        </header>   
-        <form id="form-campeonato" action="#" method="post" novalidate>
+            <p class="subtitle">Ingresá el <strong>ID del piloto</strong>, el <strong>puntaje sumado</strong> y la <strong>marca</strong>.</p>
+        </header>
+        <form id="form-campeonato" action="/ACTC.proyecto/Pagina/api/actualizar_campeonato.php" method="post" novalidate>
             <div class="grid">
                 <div class="field">
                     <label for="piloto_id">ID de Piloto</label>
                     <input id="piloto_id" name="piloto_id" type="number" inputmode="numeric" placeholder="Ej: 23" min="1" step="1" required />
-                    <span class="error" id="err-id">Ingresá un ID válido (número entero mayor a 0).</span>
-                </div>  
+                    <span class="error" id="err-id">Ingresá un ID válido (entero > 0).</span>
+                </div>
                 <div class="field">
                     <label for="puntaje">Puntaje sumado</label>
                     <input id="puntaje" name="puntaje" type="number" inputmode="decimal" placeholder="Ej: 15" min="0" step="0.5" required />
                     <span class="hint">Admite decimales (ej.: 7.5)</span>
                     <span class="error" id="err-pts">Ingresá un puntaje válido (0 o más).</span>
                 </div>
-            </div>    
+            </div>
             <div class="grid">
                 <div class="field">
                     <label for="marca">Marca</label>
                     <select id="marca" name="marca" required>
                         <option value="">Seleccioná una marca</option>
-                        <option value="Ford">Ford</option>
-                        <option value="Chevrolet">Chevrolet</option>
-                        <option value="Toyota">Toyota</option>
-                        <option value="Renault">Renault</option>
+                        <option>Ford</option>
+                        <option>Chevrolet</option>
+                        <option>Toyota</option>
+                        <option>Renault</option>
                     </select>
                 </div>
-            </div>    
+            </div>
             <div class="actions">
                 <button type="reset" class="btn btn-ghost">Cancelar</button>
                 <button type="submit" class="btn btn-primary">Actualizar</button>
             </div>
         </form>
     </section>
-    </main>
-    <!-- Footer -->
-    <footer class="site-footer">
-        <div class="footer-inner">
-            <strong>FOOTER</strong>
-        </div>
-    </footer>
+</main>
 
-    <script>
-function initActualizar(){
+<footer class="site-footer">
+    <div class="footer-inner"><strong>FOOTER</strong></div>
+</footer>
+
+<script>
+document.addEventListener('DOMContentLoaded', () => {
     const form = document.getElementById('form-campeonato');
-    if(!form) return;
+    if (!form) return;
     form.addEventListener('submit', async (e) => {
         e.preventDefault();
         const fd = new FormData(form);
-        const payload = Object.fromEntries(fd.entries());
-        const res = await fetch('/ACTC.proyecto/Pagina/api/actualizar_campeonato.php', {
-            method:'POST',
-            headers:{'Accept':'application/json'},
-            body:new URLSearchParams(payload)
-        });
-    const data = await res.json();
-    if(data.ok){ alert('Campeonato actualizado'); form.reset(); }
-    else { alert('Error: '+(data.msg||'No se pudo actualizar')); }
+        try {
+            const res = await fetch(form.action, { method: 'POST', body: fd });
+            const raw = await res.text();
+            console.log('Respuesta cruda actualizar_campeonato.php ->', raw);
+            let data;
+            try { data = JSON.parse(raw); } catch {
+                alert('La API no devolvió JSON. Revisá la consola (F12).');
+                return;
+            }
+            if (data.ok) { alert('Campeonato actualizado'); form.reset(); }
+            else { alert('Error: ' + (data.msg || 'No se pudo actualizar')); }
+        } catch (err) {
+        console.error(err);
+        alert('Fallo de red o ruta incorrecta hacia actualizar_campeonato.php');
+    }
+    });
 });
-}
-document.addEventListener('DOMContentLoaded', initActualizar);
 </script>
-
 </body>
 </html>
