--- a/Pagina/Pantallas/registropiloto.html
+++ b/Pagina/Pantallas/registropiloto.html
@@ -24,7 +24,7 @@
                 <h1 class="title">Registro de Piloto</h1>
                 <p class="subtitle">Completá los campos para dar de alta un nuevo piloto.</p>
             </header>   
-            <form id="form-piloto" class="form-grid" action="/ACTC.proyecto/Pagina/api/add_piloto.php" method="post">
+            <form id="form-piloto" class="form-grid" action="/ACTC.proyecto/Pagina/api/add_piloto.php" method="POST">
                 <div class="field">
                     <label for="id">ID de Piloto (opcional)</label>
                     <input type="number" id="id" name="id" min="1" placeholder="Dejar vacío para automático">
@@ -72,34 +72,5 @@
         <div class="footer-inner"><strong>FOOTER</strong></div>
     </footer>
 
-<script>
-document.addEventListener('DOMContentLoaded', () => {
-    const form = document.getElementById('form-piloto');
-    if (!form) return;
-    form.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        try {
-            const fd = new FormData(form);
-            const res = await fetch(form.action, { method: 'POST', body: fd });
-            const raw = await res.text();
-            console.log('Respuesta cruda add_piloto.php ->', raw);
-            let data;
-            try { data = JSON.parse(raw); } catch {
-                alert('La API no devolvió JSON. Revisá la consola (F12).');
-                return;
-            }
-            if (data.ok) {
-                alert('Piloto registrado. ID: ' + data.id);
-                form.reset();
-            } else {
-                alert('Error: ' + (data.msg || 'No se pudo registrar'));
-            }
-        } catch (err) {
-        console.error(err);
-        alert('Fallo de red o ruta incorrecta hacia add_piloto.php');
-    }
-    });
-});
-</script>
 </body>
 </html>
