footer relativamente terminado

--- a/Pagina/Pantallas/inicio.html
+++ b/Pagina/Pantallas/inicio.html
@@ -64,10 +64,32 @@
 </main>
 
     <!-- Footer -->
-    <footer class="site-footer">
-        <div class="footer-inner">
-            <strong>FOOTER</strong>
+<footer class="footer">
+    <div class="footer-container">
+        <div class="footer-logo">
+            <img src="./Recursos/marcas/logoactc.png" alt="ACTC Logo">
         </div>
-    </footer>
+        <div class="footer-links">
+            <h3>TC</h3>
+            <ul>
+                <li><a href="./inicio.html">Inicio</a></li>
+                <li><a href="./calendario.html">Calendario</a></li>
+                <li><a href="./campeonato.html">Resultados</a></li>
+                <li><a href="./registro.html">Registro</a></li>
+            </ul>
+        </div>
+        <div class="footer-social">
+            <h3>Seguinos</h3>
+            <div class="social-icons">
+                <a href="https://www.instagram.com/actcargentina"><img src="ruta/a/instagram.png" alt="Instagram"></a>
+                <a href="https://www.youtube.com/@actcargentina"><img src="ruta/a/youtube.png" alt="YouTube"></a>
+                <a href="https://actc.org.ar/tc/index.html"><img src="ruta/a/web.png" alt="Web"></a>
+            </div>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>© 2025 ACTC. Todos los derechos reservados.</p>
+    </div>
+</footer>
 </body>
 </html>
